[metadata]
name = opentelemetry-ext-system-metrics
description = System Metrics extension for OpenTelemetry
long_description = file: README.md
long_description_content_type = text/markdown
author = LightStep Authors
url = https://github.com/lightstep/opentelemetry-ext-system-metrics
platforms = any
license = Apache-2.0
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
python_requires = >=3.4
package_dir=
    =src
packages=find_namespace:
install_requires =
    opentelemetry-api
    opentelemetry-sdk
    psutil

[options.packages.find]
where = src
